--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /dist
 /tmp
 /out-tsc
+prebuild.js
 # Only exists if Bazel was run
 /bazel-out
 
@@ -45,3 +46,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#sensitive file
+environment.dev.ts
